fix navbar spacing

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -110,8 +110,8 @@ a:hover
 
 .navbar li
   float left
-  padding-left 0
-  padding-right 3em
+  padding-left 1em
+  padding-right 2em
 
 .navbar a 
   text-decoration none
